liga off, stakeItems mobile fix, ydrToken and index chart aspectRation on mobile

--- a/src/components/Stake/Stake.scss
+++ b/src/components/Stake/Stake.scss
@@ -128,6 +128,12 @@
 
   transition: background-color 0.3s;
 
+  @include b('mobile') {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
   & + & {
     margin-top: 15px;
   }
